# JobAgent

./: .gitignore  README.md  browser.py  index.py  info.py  jobspy_tools.py  main.py  pyproject.toml  rag.py  scrape.py
scripts/: bu.py  langhchain_playwright.py  langhchain_pw.py  pw.py  start_nlm_ingestor.sh
utils/: args.py
